2003-11-05  Roland Clobus <rclobus@bigfoot.com>
	* ai/client.c, server/player.c, server/server.c: Refuse connection
	when a game is over.
	* common/game.c, common/game.h, server/gnocatan-server-gtk.c,
	server/server.c, server/server.h: Repaired -x option, implemented
	rudimentary restart.
	* client/Makefile.am, common/Makefile.am, */config-gnome.c,
	*/config-gnome.h: Moved config-gnome.* from client/ to common/
	* server/gnocatan-server-gtk.c: Added save settings.
	* server/gnocatan-server.c, server/gnocatan-server.h: Ordered the
	names of the games.

2003-10-29  Roman Hodek  <roman@hodek.net>

	* po/de.po: removed fuzzy tags, cared for two untranslated msgs,
	made some items sound better in German.
	* ai/monopoly.c (monopoly_player), client/monopoly.c
	(monopoly_create_dlg): joined the two messages for better
	translations, needed a tmp string for that.

2003-10-28  Roman Hodek  <roman@hodek.net>

	* server/gnocatan-server-console.c (main): New option -n to set
	hostname reported to meta server (analogous field in GTK server).
	* meta-server/README.protocol: updated

2003-10-26  Jeff Breidenbach  <jab@debian.org>

	* docs/gnocatan*.6: added gnocatanai man page

2003-10-25  Roman Hodek  <roman@hodek.net>

	* server/meta.c (meta_send_details): send PROTOCOL_VERSION, not
	program VERSION.
	* meta-server/README.protocol: new file

2003-10-25  Roland Clobus <rclobus@bigfoot.com>
	* gnocatan.spec: Applied patch 829404 by Daniel Jensen
	* client/gui.c: Removed compiler warning introduced at 2003-10-19

2003-10-24  Jeff Breidenbach  <jab@debian.org>

	* debian/*: More scrollkeeper packaging fixes.

2003-10-20  Jeff Breidenbach  <jab@debian.org>

	* debian/rules, debian/control: Better scrollkeeper-ing.

2003-10-19  Roland Clobus <rclobus@bigfoot.com>
	* client/gui.c: Added word wrap to client messages window.

2003-10-17  Roland Clobus <rclobus@bigfoot.com>
	* ai/player.c, client/player.c, po/de.po, po/es.po, po/gnocatan.pot:
	Updated german translations.
