@@ -1,4 +1,8 @@
 2003-11-05  Roland Clobus <rclobus@bigfoot.com>
+	* client/chat.c, client/player.c, common/log.c, common/log.h: Bug
+	#826894: First message is not time stamped.
+	
+2003-11-05  Roland Clobus <rclobus@bigfoot.com>
 	* ai/client.c, server/player.c, server/server.c: Refuse connection
 	when a game is over.
 	* common/game.c, common/game.h, server/gnocatan-server-gtk.c,
